Finished Color Portion
fixed "Contrasting" to just colors, added in colors and centered.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,35 @@
         <h1>Andrew's Web Design System</h1>
     </header>
     <div class="container">
-        <h2> Contrasting Colors</h2>
-        
+        <h2>Colors</h2>
+        <div class="green color">
+            <p>Golf Green</p>
+            <p>#00aa00</p>
+        </div>
+        <div class="blue color">
+            <p>Ocean Blue</p>
+            <p>#009fd4</p>
+        </div>
+        <div class="purple color">
+            <p>Lavender</p>
+            <p>#b381b3</p>
+        </div>
+        <div class="slate color">
+            <p>Slate</p>
+            <p>#808080</p>
+        </div>
+        <div class="yellow color">
+            <p>Gold</p>
+            <p>#aa8f00</p>
+        </div>
+        <div class="orange color">
+            <p>Fiery Red</p>
+            <p>#ff4500</p>
+        </div>
+        <div class="red color">
+            <p>Rose</p>
+            <p>#f64747</p>
+        </div>
     </div>
     <div class="container">
 
