--- a/index.html
+++ b/index.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <head>
     <title>Andrew's Web Design System</title>
+    <!--Fonts-->
+    <!--Oswald-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <!--Ubunto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,500;1,700&display=swap" rel="stylesheet">
+    <!--QuickSand-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">  
+
 </head>
 
 <body>
     <header>
         <h1>Andrew's Web Design System</h1>
     </header>
+
+    <!--Colors Section-->
+
     <div class="container">
         <h2>Colors</h2>
         <div class="green color">
@@ -39,7 +56,29 @@
             <p>#f64747</p>
         </div>
     </div>
+
+    <!--Fonts Section-->
+
     <div class="container">
+        <h1>Popular Fonts(Google Fonts)</h1>
+        <div class="fonts">
+            <p class="font-title">Oswald</p>
+            <p id="font1-1">Sphinx of black quartz, judge my vow.</p>
+            <P id="font1-2">Sphinx of black quartz, judge my vow.</P>
+            <p id="font1-3">Sphinx of black quartz, judge my vow.</p>
+        </div>
+        <div class="fonts">
+            <p class="font-title">Ubuntu</p>
+            <p id="font2-1">Sphinx of black quartz, judge my vow.</p>
+            <p id="font2-2">Sphinx of black quartz, judge my vow.</p>
+            <p id="font2-3">Sphinx of black quartz, judge my vow.</p>
+        </div>
+        <div class="fonts">
+            <p class="font-title">QuickSand</p>
+            <p id="font3-1">Sphinx of black quartz, judge my vow.</p>
+            <p id="font3-2">Sphinx of black quartz, judge my vow.</p>
+            <p id="font3-3">Sphinx of black quartz, judge my vow.</p>
+        </div>
 
     </div>
     <div class="container">
