--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!--Colors Section-->
 
     <div class="container">
-        <h2>Colors</h2>
+        <h2 class="title">Colors</h2>
         <div class="green color">
             <p>Golf Green</p>
             <p>#00aa00</p>
@@ -60,7 +60,8 @@
     <!--Fonts Section-->
 
     <div class="container">
-        <h1>Popular Fonts(Google Fonts)</h1>
+        <h2 class="title">Popular Fonts</h2>
+        <h3>Google Fonts</h3>
         <div class="fonts">
             <p class="font-title">Oswald</p>
             <p id="font1-1">Sphinx of black quartz, judge my vow.</p>
@@ -81,7 +82,34 @@
         </div>
 
     </div>
-    <div class="container">
 
+    <!--Text Styles-->
+
+    <div class="container">
+        <h2 class="title">Text Styles</h2>
+        <div class="styles">
+            <p>H2: Titles</p>
+            <ul>
+                <li>Font Family: Ubuntu</li>
+                <li>Font Weight: 700</li>
+                <li>Font Size: 36px</li>
+            </ul>
+        </div>
+        <div class="styles">
+            <p>H3: Subheadings</p>
+            <ul>
+                <li>Font Family: Ubunto</li>
+                <li>Font Weight: 500</li>
+                <li>Font Size: 26px</li>
+            </ul>
+        </div>
+        <div class="styles">
+            <p>P: Paragraphs</p>
+            <ul>
+                <li>Font Family: Oswald</li>
+                <li>Font Weight: 300</li>
+                <li>Font Size: 26px</li>
+            </ul>
+        </div>
     </div>
 </body>
